<resources>
    <string name="app_name">交通建议</string>
    <string name="app_name_en">Travel Suggest</string>
    <string name="phone_version">手机版本:</string>
    <string name="phone_model">手机型号:</string>
    <string name="register_en">Sign Up</string>
    <string name="register">注册</string>
    <string name="nav_comfortable">社区</string>
    <string name="nav_personal">我的</string>
    <string name="nav_travel_suggest">出行</string>
    <string name="app_author_speak">身不由己事事多,一生做好每件事。天地无常,心忧在</string>
    <string name="app_author">船长</string>
    <string name="app_author_city">江苏盐城</string>
    <string name="app_author_qq">3190461349</string>
    <string name="app_author_github_address">https://github.com/liuruiqigoogle</string>
    <string name="app_author_email">3190461349@qq.com</string>
    <string name="app_user_key">识别码:&#160;&#160;</string>
    <string name="login_username_and_email">用户名/邮箱</string>
    <string name="register_username">用户名</string>
    <string name="register_password">密码</string>
    <string name="register_email">电子邮箱</string>
    <string name="register_phone">手机号码</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败</string>
    <string name="register_input_right_format">请输入正确的格式</string>
    <string name="register_input_right_format_email">请输入正确的电子邮箱格式</string>
    <string name="register_input_username">请输入用户名</string>
    <string name="register_input_password">请输入密码</string>
    <string name="register_input_email">请输入电子邮箱</string>
    <string name="register_input_phone">请输入手机号码</string>
    <string name="login_password">密码</string>
    <string name="login">登陆</string>
    <string name="no_login">还没有账号？</string>
    <string name="login_success">登陆成功</string>
    <string name="login_failed">登陆失败</string>
    <string name="login_server_error">服务器异常</string>
    <string name="login_username_and_password_null">用户名或者邮箱输入不能为空</string>
    <string name="login_password_null">密码输入不能为空</string>
    <string name="login_loading">正在登陆&#8230;</string>
    <string name="personal_info">个人信息</string>
    <string name="personal_collect">我的收藏</string>
    <string name="personal_qrCode">我的二维码</string>
    <string name="comfortable_tab_video">视频</string>
    <string name="comfortable_tab_chat">话题</string>
    <string name="video_ry_like">你喜欢了这个视频</string>
    <string name="video_speak_nice">说点好听的吧~</string>
    <string name="comment_success">评论成功</string>
    <string name="comment_error">评论失败</string>
    <string name="release_comment">发布言论</string>
    <string name="release">发布</string>
    <string name="release_relaxing_time">2020轻松时刻</string>
    <string name="release_hint">分享下你今天遇到的开心事吧~</string>
    <string name="release_no_null">分享内容不能为空哦~</string>
    <string name="release_success">发布成功~</string>
    <string name="release_loading">发布中，请稍等</string>
    <string name="release_failed">发布失败 -v-</string>
    <string name="about_me_collect">我的收藏</string>

    <string name="bad_health">检测到车主当前精神状态欠佳，正在搜素附近旅馆。请稍等…</string>
    <string name="great_health">当前精神状态健康！警报解除。</string>

</resources>
