<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        tools:context=".activity.ReleaseContentActivity">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorWhite"
            tools:ignore="UselessLeaf,UselessParent">


            <ImageView
                android:id="@+id/release_final"
                android:layout_width="@dimen/image_size_30"
                android:layout_height="@dimen/image_size_30"
                android:layout_gravity="center|left"
                android:layout_marginLeft="@dimen/margin_10"
                android:src="@mipmap/ic_release_wrong"
                tools:ignore="ContentDescription,RtlHardcoded" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/release_comment"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_16" />


            <Button
                android:id="@+id/release_btn"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="right|center"
                android:layout_marginRight="@dimen/margin_10"
                android:background="@drawable/release_btn_circle"
                android:text="@string/release"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_16"
                tools:ignore="RtlHardcoded" />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height_1dp"
                android:layout_gravity="bottom"
                android:background="@color/colorGray" />

        </FrameLayout>


        <EditText
            android:id="@+id/release_input_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="left|top"
            android:hint="@string/release_hint"
            android:inputType="textMultiLine"
            android:maxLines="1000"
            android:minHeight="100dp"
            android:padding="@dimen/padding_16"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height_1dp"
            android:layout_gravity="bottom"
            android:background="@color/colorGray" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/release_add_tag"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/margin_15"
            android:layout_marginTop="@dimen/margin_15"
            android:gravity="center"
            android:paddingLeft="@dimen/margin_10"
            android:text="@string/release_relaxing_time"
            android:textColor="@color/release_theme"
            android:textSize="@dimen/text_size_12"
            android:textStyle="bold"
            app:backgroundTint="@color/colorWhite"
            app:cornerRadius="@dimen/margin_13"
            app:icon="@mipmap/ic_release_sanjiao"
            app:iconGravity="textEnd"
            app:iconPadding="2dp"
            app:iconTint="@color/release_theme"
            app:layout_constraintLeft_toLeftOf="parent"
            app:strokeColor="@color/release_theme"
            app:strokeWidth="1dp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_15"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:overScrollMode="never"/>


    </LinearLayout>
</layout>