<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGray"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".activity.UserInfoActivity">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/qrCode_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorGray"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/personal_qrCode"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_20" />


        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/gery_inactive"
            android:layout_height="match_parent"
            android:gravity="center">


            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/card_width"
                android:layout_height="@dimen/card_height"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.shehuan.niv.NiceImageView
                        android:id="@+id/qr_user_icon"
                        android:layout_width="@dimen/circle_width_50"
                        android:layout_height="@dimen/circle_height_50"
                        android:layout_marginLeft="@dimen/margin_20"
                        android:layout_marginTop="@dimen/margin_20"
                        android:src="@mipmap/ic_user_test_icon"
                        app:corner_bottom_left_radius="@dimen/margin_6"
                        app:corner_bottom_right_radius="@dimen/margin_6"
                        app:corner_top_left_radius="@dimen/margin_6"
                        app:corner_top_right_radius="@dimen/margin_6"
                        app:is_circle="false" />

                    <TextView
                        android:id="@+id/qr_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/qr_user_icon"
                        android:layout_marginLeft="@dimen/margin_10"
                        android:layout_marginTop="@dimen/margin_5"
                        android:layout_toRightOf="@id/qr_user_icon"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_size_16"
                        tools:text="@string/app_author" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">


                    </LinearLayout>

                    <ImageView
                        android:id="@+id/qr_user_sex"
                        android:layout_width="@dimen/image_size_15"
                        android:layout_height="@dimen/image_size_15"
                        android:layout_marginBottom="@dimen/margin_5"
                        android:layout_alignBottom="@+id/qr_user_name"
                        android:layout_marginLeft="@dimen/margin_5"
                        android:layout_toRightOf="@+id/qr_user_name" />

                    <TextView
                        android:id="@+id/qr_user_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/qr_user_sex"
                        android:layout_alignLeft="@+id/qr_user_name"
                        android:layout_marginTop="@dimen/margin_8"
                        android:textSize="@dimen/text_size_12"
                        tools:text="@string/app_author_city" />

                    <ImageView
                        android:id="@+id/qr_code_image"
                        android:layout_width="@dimen/zxing_width"
                        android:layout_height="@dimen/zxing_width"
                        android:layout_centerInParent="true" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </LinearLayout>
</layout>